workshop03/bggapp-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-deploy-v2
  labels:
    name: bggapp-deploy-v2
spec:
  replicas: 3
  selector: 
    matchLabels: 
      name: bggapp-pod-v2
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: bggapp-pod-v2
      labels:
        name: bggapp-pod-v2
    spec:
      containers:
      - name: bggapp-container-v2
        image: stackupiss/bgg-backend:v2
        imagePullPolicy: IfNotPresent
        ports:
        - name: bggapp-port-v2
          containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 750m
            memory: 256Mi
        args:
        - --prefix
        - /v2

---
apiVersion: v1
kind: Service
metadata:
  name: bggapp-svc-v2
  labels: 
    name: bggapp-svc-v2
spec:
  type: ClusterIP
  selector:
    name: bggapp-pod-v2
  ports:
  - port: 8080
    targetPort: bggapp-port-v2
