workshop03/bgg-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: bgg-ing
  labels:
    name: bgg-ing
spec: 
  ingressClassName: nginx
  rules: 
  - host: bgg-104.248.97.196.nip.io
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend: 
          service:
            name: bggapp-svc-v1
            port: 
              number: 8080
      - path: /v2
        pathType: Prefix
        backend: 
          service:
            name: bggapp-svc-v2
            port: 
              number: 8080
